[gd_scene load_steps=2 format=3 uid="uid://rcf2fnyhkmf7"]

[ext_resource type="Script" uid="uid://2n30nvck3whb" path="res://Scripts/shop.gd" id="1_a0mxf"]

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a0mxf")

[node name="ShopContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -490.0
offset_top = -271.0
offset_right = 474.0
offset_bottom = 271.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ShopContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GridContainer" type="GridContainer" parent="ShopContainer/MarginContainer"]
layout_mode = 2
columns = 2

[node name="TowerHPLabel" type="Label" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 25
text = "Tower HP Upgrade "

[node name="TowerHPButton" type="Button" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
disabled = true
text = "50 Points"

[node name="AmmoLabel" type="Label" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "50 more ammo"

[node name="AmmoButton" type="Button" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
disabled = true
text = "10 Points"

[node name="SpeedLabel" type="Label" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Speed Boost"

[node name="SpeedButton" type="Button" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
disabled = true
text = "200 Points"

[node name="ExitButton" type="Button" parent="ShopContainer/MarginContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
text = "Exit"

[connection signal="pressed" from="ShopContainer/MarginContainer/GridContainer/TowerHPButton" to="." method="_on_tower_hp_button_pressed"]
[connection signal="pressed" from="ShopContainer/MarginContainer/GridContainer/AmmoButton" to="." method="_on_ammo_button_pressed"]
[connection signal="pressed" from="ShopContainer/MarginContainer/GridContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="ShopContainer/MarginContainer/GridContainer/ExitButton" to="." method="_on_exit_button_pressed"]
